# knowledgecollector

./: .gitignore  README.md  fetch_discord.sh  pyproject.toml  send_heartbeat.sh
src/discord/: config.py  discord_api.py  main.py
